--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.5.1",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "web3": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
