--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "background.js",
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
-    "@hashgraph/sdk": "1.4.6",
+    "@hashgraph/sdk": "^2.0.17-beta.1",
     "@ledgerhq/errors": "^5.41.0",
     "@ledgerhq/hw-transport": "^5.41.0",
     "@ledgerhq/hw-transport-webhid": "^5.41.0",
@@ -47,8 +47,8 @@
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.5.1",
-    "zxcvbn": "^4.4.2",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
