--- a/.github/workflows/deploy-gcp.yaml
+++ b/.github/workflows/deploy-gcp.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build MyHbarWallet
+      - name: Build
         run: |
           npm install && \
           npm run build
